--- a/.github/workflows/publish-to-dockerhub.yaml
+++ b/.github/workflows/publish-to-dockerhub.yaml
@@ -49,4 +49,4 @@ jobs:
           push: true
           tags: |
             xmapst/kubefilebrowser:latest
-            xmapst/kubefilebrowser:${{ GITHUB_REF_NAME }}
+            xmapst/kubefilebrowser:${{ github.ref }}
