--- a/.github/workflows/publish-to-dockerhub.yaml
+++ b/.github/workflows/publish-to-dockerhub.yaml
@@ -30,6 +30,16 @@ jobs:
           rm -fr node_modules
           cd ..
           sed -i "s/Vue App/KubeFileBrowser/g" static/index.html
+      - name: Install go
+        uses: actions/setup-go@v3
+        with:
+          go-version: '>=1.18.0'
+      - name: Build Kftools
+        run: |
+          sudo apt-get update
+          sudo apt-get install upx musl-dev git -y
+          chmod +x 00-build_lib.sh
+          ./00-build_lib.sh
       - name: Get tag name
         uses: olegtarasov/get-tag@v2.1
       - name: Set up QEMU
