--- a/.github/workflows/publish-to-dockerhub.yaml
+++ b/.github/workflows/publish-to-dockerhub.yaml
@@ -56,7 +56,7 @@ jobs:
         with:
           context: .
           dockerfile: Dockerfile
-          platforms: linux/arm,linux/arm64,linux/amd64,linux/386
+          platforms: linux/arm/v6,linux/arm/v7,linux/arm/v8,linux/arm64,linux/amd64,linux/386,linux/ppc64le,linux/s390x
           push: true
           tags: |
             xmapst/kubefilebrowser:latest
